--- a/Covid-FL/index.html
+++ b/Covid-FL/index.html
@@ -43,8 +43,7 @@
                 </div>
                 <div class="countries-wrapper">
                     <div class="discription">
-                        First of all you need to download any of datasets from <a target="_blank"
-                            rel="noopener noreferrer"
+                        First of all you need to download any dataset from <a target="_blank" rel="noopener noreferrer"
                             href="https://www.archilab.online/data2/dataset-covid-19">here</a>.
                         Then just put .xls file to the input above.
                         <br>
@@ -53,7 +52,7 @@
                             href="data-set.xls">here</a>.
                         <br>
                         <br>
-                        If you wont execute your own dataset for correct work it need to contain header like this.
+                        If you want execute your own dataset for correct work it need to contain header like this.
                         <br>
                         <img width="270px" src="dataset-header-example.png" alt="">
                     </div>
