--- a/Covid-FL/index.html
+++ b/Covid-FL/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/rulesList.css">
     <link rel="stylesheet" href="css/scrollbar.css">
     <link rel="stylesheet" href="css/rulesBase.css">
+    <link rel="stylesheet" href="css/difuzzification.css">
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -77,6 +78,8 @@
             <div class="rules-base-wrapper">
                 <div class="rules-base"></div>
             </div>
+
+            <div class="difuz-wrapper"></div>
         </div>
 
     </main>
@@ -86,6 +89,9 @@
     <script src="libs/bootstrap/bootstrap.bundle.min.js"></script>
     <script defer src="js/tools.js"></script>
     <script defer src="js/Worksheet.js"></script>
+    <script defer src="js/StartRegion.js"></script>
+    <script defer src="js/CenterRegion.js"></script>
+    <script defer src="js/EndRegion.js"></script>
     <script defer src="js/Axis.js"></script>
     <script defer src="js/FuzzySystem.js"></script>
     <script defer src="js/ChartBuilder.js"></script>
