Add footer to covid-fl

--- a/Covid-FL/index.html
+++ b/Covid-FL/index.html
@@ -83,7 +83,12 @@
         </div>
 
     </main>
-    <footer></footer>
+    <footer class="d-flex flex-column align-items-end px-3 mb-2">
+        <span>
+            Made by WB.
+        </span>
+        <a href="https://github.com/taratatuy" tabindex="-1">GitHub.</a>
+    </footer>
 
 
     <script src="libs/bootstrap/bootstrap.bundle.min.js"></script>
